k8s/analytics/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: analytics-service }
spec:
  selector: { matchLabels: { app: analytics } }
  replicas: 2
  template:
    metadata: { labels: { app: analytics } }
    spec:
      containers:
      - name: analytics
        image: docker.io/sheharaa/lugx-analytics-service:latest
        imagePullPolicy: Always
        ports:
        - { containerPort: 8000 }
        readinessProbe:
          httpGet: { path: /docs, port: 8000 }
          initialDelaySeconds: 5
          periodSeconds: 10
