k8s/analytics/analytics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: lugx.local
    http:
      paths:
      - path: /analytics/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: analytics-service
            port:
              number: 80
